# traccar

./: .checkstyle  .dockerignore  .editorconfig  .env.sample  .gitignore  .gitmodules  .redocly.lint-ignore.yaml  .travis.yml  AnalyzeMultiplePackets.java  AnalyzeNewPacket.java  AnalyzePacket.java  AnalyzePacketCRC.java  AnalyzeSystemLog.java  CheckSuffix.java  CheckSystemLogPacket.java  DEPLOYMENT.md  DebugPacket.java  Docker-usage.txt  Dockerfile  Dockerfile.alpine  GTR9_0000_SUFFIX_FIX.md  HOWEN_EVENT_CODES.md  LICENSE.md  LICENSE.txt  Link to debug.xml  Makefile  OFFLINE_BATCH_DETECTION.md  P99_NETWORK_INFO_FIX.md  PULL_REQUEST.md  Procfile  README.md  README.txt  README_DEVIATIONS.md  README_MAVEN.txt  README_SETUP.txt  README_Socratec.md  REFACTORING.md  SviasProtocolDecoderTest.java  TestDecodePacket.java  TestDecodePacket2.java  (+59 more)
.circleci/: config.yml
.ebextensions/: cronjob  cw.config  options.config
.github/: CONTRIBUTING.md  Dockerfile.ubuntu  FUNDING.yml  ISSUE_TEMPLATE.md
.metadata/: version.ini
backup/: debug.xml  default.xml  hazelcast.xml  start.sh
conf/: traccar.xml
database/: changelog-3.3.xml  changelog-3.5.xml  changelog-3.6.xml  changelog-master.xml  db.changelog-3.0.xml  db.changelog-3.1.xml  db.changelog-3.2.xml  db.changelog-3.3.xml  db.changelog-dron.xml  db.changelog-dron1.xml  db.changelog-master.xml  db.changelog-normalize.xml
deploy/: traccar.conf
docker/: Dockerfile.alpine  Dockerfile.builder  Dockerfile.debian  Dockerfile.ubuntu  build.sh
docs/: README.md  api.md  production.md
frontend/: .eslintrc.js  README.md  package.json  quasar.conf.js  quasar.extensions.json
gradle/: checkstyle.xml  findbugs.xml
media/: do_not_delete.txt
nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
schema/: Traccar_Oracle.sql  changelog-3.10.xml  changelog-3.11.xml  changelog-3.12.xml  changelog-3.14.xml  changelog-3.15-orangecells-customer.xml  changelog-3.15-orangecells-peripheral.xml  changelog-3.15-orangecells.xml  changelog-3.15.xml  changelog-3.16.xml  changelog-3.17-fcm-notifications.xml  changelog-3.17.xml  changelog-3.18.xml  changelog-3.3.xml  changelog-3.5.xml  changelog-3.6.xml  changelog-3.7-notmssql.xml  changelog-3.7.xml  changelog-3.8.xml  changelog-3.9.xml  changelog-4.0-clean.xml  (+45 more)
traccar-rs/: Cargo.toml  config.toml
traccar-rs/crates/traccar-api/: Cargo.toml
traccar-rs/crates/traccar-api/src/: auth.rs  lib.rs  middleware.rs  websocket.rs
traccar-rs/crates/traccar-api/src/routes/: attributes.rs  audit.rs  calendars.rs  commands.rs  devices.rs  drivers.rs  events.rs  geofences.rs  groups.rs  health.rs  maintenance.rs  mod.rs  notifications.rs  oidc.rs  orders.rs  passwords.rs  permissions.rs  positions.rs  reports.rs  server.rs  sessions.rs  share.rs  statistics.rs  users.rs
traccar-rs/crates/traccar-broadcast/: Cargo.toml
traccar-rs/crates/traccar-broadcast/src/: lib.rs  multicast.rs  redis.rs
traccar-rs/crates/traccar-forward/: Cargo.toml
traccar-rs/crates/traccar-forward/src/: amqp.rs  json.rs  kafka.rs  lib.rs  mqtt.rs  redis.rs
traccar-rs/crates/traccar-geocoder/: Cargo.toml
traccar-rs/crates/traccar-geocoder/src/: bing.rs  geoapify.rs  google.rs  here.rs  lib.rs  locationiq.rs  mapbox.rs  nominatim.rs  opencage.rs  tomtom.rs
traccar-rs/crates/traccar-handler/: Cargo.toml
traccar-rs/crates/traccar-handler/src/: lib.rs  post_process.rs
traccar-rs/crates/traccar-handler/src/events/: alarm.rs  behavior.rs  command_result.rs  driver.rs  fuel.rs  geofence.rs  ignition.rs  maintenance.rs  media.rs  mod.rs  motion.rs  overspeed.rs
traccar-rs/crates/traccar-handler/src/position/: computed_attributes.rs  copy_attributes.rs  database.rs  distance.rs  driver.rs  engine_hours.rs  filter.rs  forwarding.rs  geocoder.rs  geofence.rs  hemisphere.rs  mod.rs  motion.rs  outdated.rs  speed_limit.rs  time.rs
traccar-rs/crates/traccar-helper/: Cargo.toml
traccar-rs/crates/traccar-helper/src/: bit.rs  checksum.rs  date.rs  hashing.rs  lib.rs  parser.rs  units.rs
traccar-rs/crates/traccar-model/: Cargo.toml
traccar-rs/crates/traccar-model/src/: lib.rs
traccar-rs/crates/traccar-notify/: Cargo.toml
traccar-rs/crates/traccar-notify/src/: command.rs  email.rs  firebase.rs  lib.rs  pushover.rs  sms.rs  telegram.rs  traccar_client.rs  web.rs
traccar-rs/crates/traccar-protocol/: Cargo.toml
traccar-rs/crates/traccar-protocol/src/: codec.rs  lib.rs  server.rs  session.rs
traccar-rs/crates/traccar-protocol/src/protocols/: adm.rs  ais.rs  alematics.rs  anytrek.rs  apel.rs  aplicom.rs  appello.rs  aquila.rs  ardi01.rs  arknav.rs  arknavx8.rs  armoli.rs  arnavi.rs  astra.rs  at2000.rs  atrack.rs  auro.rs  austinnb.rs  autofon.rs  autograde.rs  autotrack.rs  avema.rs  avl301.rs  b2316.rs  bce.rs  blackkite.rs  blue.rs  box_.rs  bstpl.rs  bws.rs  c2stek.rs  calamp.rs  carcell.rs  carscop.rs  cartrack.rs  castel.rs  cautela.rs  cellocator.rs  cguard.rs  cityeasy.rs  (+223 more)
traccar-rs/crates/traccar-report/: Cargo.toml
traccar-rs/crates/traccar-report/src/: combined.rs  events.rs  lib.rs  route.rs  stops.rs  summary.rs  trips.rs
traccar-rs/crates/traccar-schedule/: Cargo.toml
traccar-rs/crates/traccar-schedule/src/: device_inactive.rs  health_check.rs  lib.rs  statistics.rs
traccar-rs/crates/traccar-storage/: Cargo.toml
traccar-rs/crates/traccar-storage/src/: database.rs  lib.rs  query.rs
traccar-rs/migrations/: 001_initial_schema.sql
traccar-rs/src/: config.rs  error.rs  lib.rs  main.rs
web/: app.js  (+25 more)
(+5670 files in other folders)
