[package]
name = "traccar-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
traccar-model = { path = "../traccar-model" }
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
